<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#E6E6E6"
    android:layout_height="match_parent">


    <com.example.RegisterDemo.CircleImageView
        android:id="@+id/head"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/penguin" />

    <LinearLayout
        android:id="@+id/id_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        tools:ignore="UnknownId">

        <TextView
            android:id="@+id/number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:text="@string/contact_name" />

        <EditText
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:inputType="text"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_number"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        tools:ignore="UnknownId">

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:inputType="number"
            android:padding="10dp"
            tools:ignore="TextFields"
            android:autofillHints="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >

        <Button
            android:id="@+id/AddRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_record"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="#00BCD4"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            />

        <Button
            android:id="@+id/QueryRecord"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#E14E80"
            android:text="@string/query_record"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            />

        <Button
            android:id="@+id/ModifyRecord"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#E8A7BD"
            android:text="@string/modify_record"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            />

        <Button
            android:id="@+id/DeleteRecord"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#7DBFDD"
            android:text="@string/delete_record"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:id="@+id/contact_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="" />

    </LinearLayout>

</RelativeLayout>